--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ header{
   border:1px solid rgba(255,255,255,.15);
   border-radius:30px;
   padding:8px 14px;
-  display:flex;
-  align-items:center;
+  display:flex;align-items:center;
 }
 .search input{
   border:0;background:transparent;color:inherit;outline:0;
@@ -107,9 +106,7 @@ header{
   background:rgba(255,255,255,.05);
 }
 .lang-bar::-webkit-scrollbar,
-.cat-bar::-webkit-scrollbar{
-  display:none;
-}
+.cat-bar::-webkit-scrollbar{display:none}
 
 .lang-btn,.cat-btn{
   padding:6px 12px;border-radius:20px;
@@ -144,13 +141,6 @@ video{
   background:var(--card);
   padding:12px 14px;
   border-radius:var(--radius);
-  box-shadow:0 2px 4px rgba(0,0,0,.25);
-}
-.highlight-title{
-  margin:0 0 10px 0;
-  font-size:16px;
-  color:var(--muted);
-  font-weight:600;
 }
 .highlight-grid{
   display:grid;
@@ -167,11 +157,6 @@ video{
   cursor:pointer;
   color:#0b1220;
   text-align:center;
-}
-@media(max-width:768px){
-  .highlight-grid{
-    grid-template-columns:repeat(3,1fr);
-  }
 }
 
 /* ---------- SIDEBAR ---------- */
@@ -206,15 +191,11 @@ video{
   display:flex;align-items:center;justify-content:center;
 }
 
-/* ---------- MOBILE ---------- */
 @media(max-width:768px){
   .container{grid-template-columns:1fr}
   video{height:240px}
-  .sidebar{
-    height:auto;
-    max-height:280px;
-    overflow:auto;
-  }
+  .highlight-grid{grid-template-columns:repeat(3,1fr)}
+  .sidebar{height:auto;max-height:280px;overflow:auto}
 }
 </style>
 </head>
@@ -250,30 +231,36 @@ video{
     <video id="player" controls autoplay playsinline webkit-playsinline></video>
     <h3 id="nowPlaying">No channel selected</h3>
 
-    <!-- ---------- HIGHLIGHT SECTION ---------- -->
     <div class="highlight-box">
-           <div class="highlight-grid">
-        <button class="highlight-btn" data-url="http:\\awaazindia.livebox.co.in\AwaazIndaTVhls\Live.m3u8">Awaz India</button>
-        <button class="highlight-btn" data-url="https:\\ndtvindiaelemarchana.akamaized.net\hls\live\2003679\ndtvindia\master.m3u8">Ndtv india</button>
-        <button class="highlight-btn" data-url="https:\\d35j504z0x2vu2.cloudfront.net\v1\manifest\0bc8e8376bd8417a1b6761138aa41c26c7309312\9xm\23886666-8fc5-470f-aab1-bd637ed607b1\3.m3u8">9xm</button>
+      <div class="highlight-grid">
+        <button class="highlight-btn" data-url="http://awaazindia.livebox.co.in/AwaazIndaTVhls/Live.m3u8">Awaz India</button>
+        <button class="highlight-btn" data-url="https://ndtvindiaelemarchana.akamaized.net/hls/live/2003679/ndtvindia/master.m3u8">NDTV India</button>
+        <button class="highlight-btn" data-url="https://d35j504z0x2vu2.cloudfront.net/v1/manifest/0bc8e8376bd8417a1b6761138aa41c26c7309312/9xm/23886666-8fc5-470f-aab1-bd637ed607b1/3.m3u8">9XM</button>
         <button class="highlight-btn" data-url="https://raj.stream/live.m3u8">Raj Music</button>
-        <button class="highlight-btn" data-url="https:\\dyjmyiv3bp2ez.cloudfront.net\pub-iotv9kanmo6oiq\liveabr\playlist.m3u8">TV9</button>
-        <button class="highlight-btn" data-url="https:\\aasthaott.akamaized.net\110923\smil:aasthakannada.smil\playlist.m3u8">Aastha Kannada</button>
+        <button class="highlight-btn" data-url="https://dyjmyiv3bp2ez.cloudfront.net/pub-iotv9kanmo6oiq/liveabr/playlist.m3u8">TV9</button>
+        <button class="highlight-btn" data-url="https://aasthaott.akamaized.net/110923/smil:aasthakannada.smil/playlist.m3u8">Aastha Kannada</button>
       </div>
     </div>
-
   </section>
 
   <aside class="sidebar">
-        <div id="channelList" class="channel-list"></div>
+    <div id="channelList" class="channel-list"></div>
   </aside>
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
 <script>
-/* ---------- DATA ---------- */
+/* ---------- GLOBALS ---------- */
+let mode='language',currentLang='kan',currentCat='news';
+let allChannels=[];
+const listEl=document.getElementById("channelList");
+const player=document.getElementById("player");
+const nowPlaying=document.getElementById("nowPlaying");
+const langBar=document.getElementById("langBar");
+const catBar=document.getElementById("catBar");
 
+/* ---------- RENDER LANGUAGE BUTTONS ---------- */
 const LANGUAGES=[
   {code:'hin',name:'Hindi'},{code:'tam',name:'Tamil'},{code:'tel',name:'Telugu'},
   {code:'mal',name:'Malayalam'},{code:'kan',name:'Kannada'},
@@ -285,21 +272,6 @@ const LANGUAGES=[
   {code:'urd',name:'Urdu'},{code:'other',name:'Other'}
 ];
 
-const CATEGORIES=[
-  'news','entertainment','music','movies','sports','kids',
-  'education','business','religious','lifestyle','auto',
-  'classic','travel','science','series','general'
-];
-
-let mode='language',currentLang='kan',currentCat='news';
-let allChannels=[];
-const listEl=document.getElementById("channelList");
-const player=document.getElementById("player");
-const nowPlaying=document.getElementById("nowPlaying");
-const langBar=document.getElementById("langBar");
-const catBar=document.getElementById("catBar");
-
-/* ---------- RENDER LANGUAGE BUTTONS ---------- */
 function renderLangBar(){
   LANGUAGES.forEach(l=>{
     const b=document.createElement("button");
@@ -309,13 +281,20 @@ function renderLangBar(){
     b.onclick=()=>{
       document.querySelectorAll(".lang-btn").forEach(bb=>bb.classList.remove("active"));
       b.classList.add("active");
-      currentLang=l.code;fetchChannels();
+      currentLang=l.code;
+      fetchChannels();
     };
     langBar.appendChild(b);
   });
 }
 
-/* ---------- RENDER CATEGORY BUTTONS ---------- */
+/* ---------- CATEGORY BUTTONS ---------- */
+const CATEGORIES=[
+  'news','entertainment','music','movies','sports','kids',
+  'education','business','religious','lifestyle','auto',
+  'classic','travel','science','series','general'
+];
+
 function renderCatBar(){
   CATEGORIES.forEach(c=>{
     const b=document.createElement("button");
@@ -325,30 +304,14 @@ function renderCatBar(){
     b.onclick=()=>{
       document.querySelectorAll(".cat-btn").forEach(bb=>bb.classList.remove("active"));
       b.classList.add("active");
-      currentCat=c;fetchChannels();
+      currentCat=c;
+      fetchChannels();
     };
     catBar.appendChild(b);
   });
 }
 
-/* ---------- FETCH PLAYLIST ---------- */
-async function fetchChannels(){
-  listEl.innerHTML="<div>Loading...</div>";
-  const url = mode==="language"
-    ? `https://iptv-org.github.io/iptv/languages/${currentLang}.m3u`
-    : `https://iptv-org.github.io/iptv/categories/${currentCat}.m3u`;
-
-  try{
-    const res=await fetch(url);
-    const text=await res.text();
-    allChannels=parseM3U(text);
-    renderChannelList(allChannels);
-  }catch(err){
-    listEl.innerHTML="<div style='color:red'>Failed to load playlist</div>";
-  }
-}
-
-/* ---------- PARSE M3U ---------- */
+/* ---------- M3U PARSER ---------- */
 function parseM3U(data){
   const lines=data.split("\n");
   const arr=[];let temp={};
@@ -367,7 +330,25 @@ function parseM3U(data){
   return arr;
 }
 
-/* ---------- RENDER LIST ---------- */
+/* ---------- FETCH CHANNELS ---------- */
+async function fetchChannels(){
+  listEl.innerHTML="<div>Loading...</div>";
+
+  const url = mode==="language"
+    ? `https://iptv-org.github.io/iptv/languages/${currentLang}.m3u`
+    : `https://iptv-org.github.io/iptv/categories/${currentCat}.m3u`;
+
+  try{
+    const res=await fetch(url);
+    const text=await res.text();
+    allChannels=parseM3U(text);
+    renderChannelList(allChannels);
+  }catch(err){
+    listEl.innerHTML="<div style='color:red'>Failed to load playlist</div>";
+  }
+}
+
+/* ---------- DISPLAY LIST ---------- */
 function renderChannelList(ch){
   listEl.innerHTML="";
   ch.forEach(c=>{
@@ -379,20 +360,20 @@ function renderChannelList(ch){
       </div>
       <div>${c.title}</div>
     `;
-    item.onclick=()=>playChannel(c);
+    item.onclick=()=>playChannel(c.src,c.title);
     listEl.appendChild(item);
   });
 }
 
 /* ---------- PLAY CHANNEL ---------- */
-function playChannel(ch){
-  nowPlaying.textContent=ch.title;
+function playChannel(url,title){
+  nowPlaying.textContent=title;
   if(Hls.isSupported()){
     const h=new Hls();
-    h.loadSource(ch.src);
+    h.loadSource(url);
     h.attachMedia(player);
-  }else{
-    player.src=ch.src;
+  } else {
+    player.src=url;
   }
   player.play().catch(()=>{});
 }
@@ -408,7 +389,7 @@ document.getElementById("search").addEventListener("input",e=>{
 /* ---------- REFRESH ---------- */
 document.getElementById("refresh").onclick=fetchChannels;
 
-/* ---------- THEME SWITCH ---------- */
+/* ---------- THEME ---------- */
 document.getElementById("themeToggle").onclick=()=>{
   const dark=document.body.dataset.theme==="dark";
   document.body.dataset.theme=dark?"light":"dark";
@@ -424,7 +405,6 @@ document.getElementById("tabLang").onclick=()=>{
   catBar.style.display="none";
   fetchChannels();
 };
-
 document.getElementById("tabCat").onclick=()=>{
   mode="category";
   tabCat.classList.add("active");
@@ -434,21 +414,21 @@ document.getElementById("tabCat").onclick=()=>{
   fetchChannels();
 };
 
-/* ---------- PLAY HIGHLIGHT CHANNELS ---------- */
+/* ---------- HIGHLIGHT CLICK ---------- */
 document.querySelectorAll(".highlight-btn").forEach(btn=>{
   btn.onclick=()=>{
     const url=btn.dataset.url;
-    nowPlaying.textContent=btn.textContent;
-    if(Hls.isSupported()){
-      const h=new Hls();
-      h.loadSource(url);
-      h.attachMedia(player);
-    } else {
-      player.src=url;
-    }
-    player.play().catch(()=>{});
+    playChannel(url,btn.textContent);
   };
 });
+
+/* ---------- AUTO PLAY (AWAZ INDIA) ---------- */
+window.onload = ()=>{
+  playChannel(
+    "http://awaazindia.livebox.co.in/AwaazIndaTVhls/Live.m3u8",
+    "Awaz India TV"
+  );
+};
 
 /* ---------- INIT ---------- */
 renderLangBar();
